# FLHook

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakePresetsLinux.json  CMakePresetsWindows.json  CNAME  Dependencies.cmake  Doxyfile  FLHook.sln  LoadConf.cmake  __plugin__template_2_main_8cpp.html  __plugin__template_2_main_8cpp.js  __plugin__template_2_main_8cpp__incl.map  __plugin__template_2_main_8cpp__incl.md5  _admin_8cpp.html  _admin_8cpp.js  _admin_8cpp__incl.map  _admin_8cpp__incl.md5  _administrative-_commands_8md.html  _advanced_startup_solars_8cpp.html  _advanced_startup_solars_8cpp.js  _advanced_startup_solars_8cpp__incl.map  _advanced_startup_solars_8cpp__incl.md5  _advanced_startup_solars_8hpp.html  _advanced_startup_solars_8hpp__dep__incl.map  _advanced_startup_solars_8hpp__dep__incl.md5  _advanced_startup_solars_8hpp__incl.map  _advanced_startup_solars_8hpp__incl.md5  _advanced_startup_solars_8hpp_source.html  _afk_8cpp.html  _afk_8cpp.js  _afk_8cpp__incl.map  _afk_8cpp__incl.md5  _afk_8h.html  _afk_8h__dep__incl.map  (+3251 more)
.github/workflows/: changelog.yml  clang.yml  docs.yaml  main.yml  nightly.yml  release.yml  sonar-build.yml  sonar-scan.yml  sonar.yml
FLHookVC6Strings/: FLHookVC6Strings.dsp  FLHookVC6Strings.dsw  FLHookVC6Strings.ncb  FLHookVC6Strings.opt  FLHookVC6Strings.plg  main.cpp
Generator/: Generator.cpp  Generator.vcxproj  Generator.vcxproj.filters
VSIX/: flhook_vsix.csproj  flhook_vsix.sln  releasenotes.txt  source.extension.vsixmanifest
VSIX/Properties/: AssemblyInfo.cs
acctpath_patch/: Readme.txt
acctpath_patch/src/: AcctPath_Patch.vcproj  Main.h
bin-vc12/flhook_plugins/: cloak.cfg  minecontrol.cfg
branches/plugininterface/: readme.txt
cppastgen/: _cppast_tiny_process.vcxproj  _cppast_tiny_process.vcxproj.filters
cppastgen/src/: cppast.vcxproj  cppast.vcxproj.filters
docs/: conf.py  contributors.md  downloads.md  doxygen-awesome.css  doxygen-header.html  index.rst  layout.xml  main.dox
docs/Contributing/: 1. Compiling.md  3. Contributing Guidelines.md  4. Recommended Visual Studio Extensions.md  5. GOTCHAs.md
docs/Development/: Inter-Plugin-Communication-(IPC).md  Note-on-the-STL.md  Recommended Visual Studio Extensions.md
docs/General Usage/: 1. Installation.md  2. Support.md  3. Plugins, Logs & Configs.md  4. Admin & User Commands.md  5. Logging.md  6. Plugin Architecture.md  7. XML Text Reference.md
docs/Usage/: Administrative-Commands.md  Blowfish-Encryption.md  Event-Mode.md  Logging.md  Plugins.md  XML Text Reference.md
docs/_static/: github.js
docs/_templates/: layout.html
docs/api/: index.rst
docs/concepts/: index.rst
flhookplugin_sdk/headers/: FLCoreDALib.h
flhookplugin_sdk/libs/: FLCoreFLServerEXE.lib  FLCoreRemoteClient.lib
include/: FLHook.hpp  Global.hpp  PCH.cpp  PCH.hpp  plugin.h
include/API/: API.hpp  InternalApi.hpp
include/Actions/: CargoManipulation.hpp  ChatActions.hpp  PlayerManipulation.hpp  RepManipulation.hpp  ShipManipulation.hpp
include/Core/: Action.hpp  AddressList.hpp  ApiInternal.hpp  ClientServerInterface.hpp  CrashCatcher.hpp  Database.hpp  DebugTools.hpp  Detour.hpp  ExceptionHandler.hpp  FLHook.hpp  FLPatch.hpp  FlufInfocardHelper.hpp  IEngineHook.hpp  IpResolver.hpp  Logger.hpp  MemoryManager.hpp  MessageHandler.hpp  MessageInterface.hpp  PluginManager.hpp  Serializer.hpp  ServerOptimizer.hpp  StartupCache.hpp  TempBan.hpp  VTables.hpp  ZoneUtilities.hpp
include/Defs/: BsonWrapper.hpp  CoreGlobals.hpp  Enums.hpp  FLHookConfig.hpp  FLPacket.hpp  SehException.hpp  ServerStats.hpp  ShipArchDefs.hpp  Structs.hpp  WeaponEquipDefs.hpp
include/Exceptions/: Action.hpp  ErrorInfo.hpp  GameException.hpp  InputException.hpp  InvalidParameterException.hpp  StopProcessingException.hpp  UnsupportedException.hpp
include/Features/: AdminCommandProcessor.hpp  DataManager.hpp  Logger.hpp  Mail.hpp  MessageHandler.hpp  TempBan.hpp
include/Helpers/: Admin.hpp  Chat.hpp  Client.hpp  Error.hpp  FileUtils.hpp  FlCodec.hpp  Ini.hpp  IniUtils.hpp  Math.hpp  Message.hpp  Personalities.hpp  Player.hpp  Solar.hpp  SqlUitls.hpp  Time.hpp
include/Tools/: CommandLineParser.hpp  Concepts.hpp  Constexpr.hpp  Deps.hpp  Detour.hpp  Enums.hpp  Hk.hpp  Macros.hpp  Serialization.hpp  Structs.hpp  TemplateHelpers.hpp  ThreadScheduler.hpp  (+2 more)
lib/: SQLiteCpp.lib  sqlite3.lib
misc/: FLHook.ini
plugins/: Plugin Common.props  Plugin.cmake
profiles/: linux  linux-dbg  linux-rel  windows  windows-dbg  windows-rel
project/: .editorconfig  Common.props  FLHook.sln  FLHook.sln.DotSettings  FLHook.vcxproj  FLHook.vcxproj.filters  vcpkg.bat  vcpkg.json
project-vc10/: FLHook.sln
project-vc12/: FLHook.vcxproj
project-vc14/: FLHook.sln  FLHook.vcxproj.filters
project-vc7/: FLHook.vcproj
project-vc9/: FLHook.sln  FLHook.vcproj
scripts/: install_deps.py  post_build.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  (+154 more)
source/: CCmds.cpp  CCmds.h  CConsole.cpp  CConsole.h  CInGame.cpp  CInGame.h  CSocket.cpp  CSocket.h  Debug.cpp  ExceptionInfo.h  Exceptions.cpp  FLHook.cpp  FLPacket.cpp  Generated.inl  Global.hpp  HkCbChat.cpp  HkCbDamage.cpp  HkCbDeath.cpp  HkCbDisconnect.cpp  HkCbIClientImpl.cpp  HkCbIEngine.cpp  HkCbIServerImpl.cpp  HkCbOther.cpp  HkCharacterIni.cpp  HkClientServerInterface.cpp  HkDataBaseMarket.cpp  HkDataPilotPersonalities.cpp  HkError.cpp  HkFLIni.cpp  HkFuncCache.cpp  HkFuncLog.cpp  HkFuncMsg.cpp  HkFuncOther.cpp  HkFuncPlayers.cpp  HkFuncTools.cpp  HkHelp.cpp  HkIChatServer.cpp  HkIClientImpl.inl  HkIEngine.cpp  HkIEngineDamage.cpp  (+25 more)
trunk/: plugin_documentation.txt  readme.txt
(+1119 files in other folders)
